css/style.css
/* ... */
.projMain {
  padding: 6rem;
  padding-top: 8rem;
  background-color: #fff;
  margin: auto;
  border: #001c00 1.5px solid;
  width: 80rem;
}

.projGrid {
  display: block;
  width: 40rem;
  margin: auto;
  /*
  grid-template-columns: 1fr 1fr;
  gap: 6rem;
  row-gap: 0rem; */
}

.flexCell {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
  margin-bottom: 2rem;
}

.imgBox {
  max-height: 32rem;
  width: 40rem;
  overflow-y: scroll;
  overflow-x: hidden;
  border: #001c00 1.5px solid;
}
.imgBox img {
  width: 100%;
  height: auto;
  padding: 0;
  margin-bottom: -0.4rem;
}

.imgBox_twoCell,
.imgBox_twoCell {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  width: 40rem;
}

.imgBox_oneCell {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40rem;
}

.imgBox_oneCell > img {
  width: 40rem;
  height: 100%;
  padding: 0;
  border: #001c00 1.5px solid;
  margin: 0;
}

.imgBox_twoCell > img {
  width: 19rem;
  height: 100%;
  padding: 0;
  border: #001c00 1.5px solid;
  margin: 0;
}

#chat2 {
  width: 18.88rem;
}

.imgCap {
  margin-top: 1rem;
}

.projTitle {
  margin-bottom: 3rem;
  text-align: center;
}
.projMain h3 {
  font-size: 7rem;
  line-height: 6rem;
  letter-spacing: -2px;
  text-align: left;
  padding: 0rem;
  display: inline;
  -webkit-text-stroke-width: 0px;
}

.subTitle {
  font-family: ThinReg;
  font-size: 2rem;
  -webkit-text-stroke-width: 0px;
  letter-spacing: 0px;
}

.projGrid p,
.projGrid ul,
.projGrid h5,
.imgCap {
  font-family: Light;
  font-size: 1.75rem;
  line-height: 2rem;
}

.flexCell p {
  font-size: 1rem;
  line-height: 1.5rem;
  font-family: ThinItalic;
  margin-top: 0.25rem;
  text-align: center;
}

.projGrid h5 {
  font-family: MediumRegular;
  margin: 1rem 0;
  margin-top: 3rem;
}

.projGrid ul {
  list-style-type: disc;
  margin-bottom: 1rem;
}

.projGrid li {
  margin-left: 2.5rem;
  margin-bottom: 0.5rem;
}

.warnText {
  border: #001c00 1.5px dashed;
  padding: 1rem 2rem;
  margin-top: 3rem;
}

.warnText h5 {
  margin-top: 1rem;
}

.projGrid p,
.projGrid ul,
.imgCap {
  font-size: 1.25rem;
}

.flexCell p {
  font-size: 1rem;
}

button {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: Light;
  font-size: 1.25rem;
  max-width: 14rem;
  margin-left: 1rem;
  margin-top: 0rem;
  padding: auto 1rem;
}

.btnBox {
  display: flex;
  justify-content: center;
  margin: 3rem auto;
  margin-top: 2rem;
}

.fa-brands {
  font-size: 1.7rem;
  margin-left: 0.5rem;
}

/* MEDIA QUERIES */

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  html {
    font-size: 12px;
  }

  #title,
  #canvas {
    min-height: 70vh;
  }

  .menu {
    width: 100%;
    background-color: transparent;
    position: fixed;
    margin: 2rem 0;
    padding: 0 1rem;
    text-align: right;
    font-size: 1.5rem;
    font-family: Light;
    z-index: 10;
  }

  #siteNav ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    list-style-type: none;
    margin: auto;
    padding: 1rem;
  }

  #siteNav ul li {
    display: inline-block;
  }

  #siteNav ul li a {
    padding: 0.5rem;
    margin-left: 0.5rem;
    text-decoration: none;
    transition: all 0.1s;
    border-radius: 2px;
    font-family: Light;
  }

  .menu ul li a {
    color: #001c00;
    background-color: white;
    border: solid 1.5px #001c00;
    box-shadow: -5px -5px 0 #001c00;
  }

  #projSect,
  section {
    padding: 0;
  }

  #workBody .mainCell {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0 1rem;
  }

  .projMain {
    width: 100%;
    padding: 1.5rem;
    padding-top: 8rem;
  }

  .subGrid {
    max-width: auto;
    margin: 1rem;
    box-shadow: -0.75rem -0.75rem 0 #001c00;
  }

  .projGrid {
    width: 100%;
  }

  .imgBox_oneCell {
    width: 100%;
  }

  .imgBox_oneCell > img,
  .imgBox {
    max-width: 100%;
  }

  h1 {
    font-size: 8rem;
    line-height: 8rem;
    letter-spacing: 0px;
    padding: 2rem;
  }

  h2 {
    font-size: 7rem;
    letter-spacing: 0;
    margin-bottom: 0;
  }

  .projectDesc h3 {
    line-height: 2.5rem;
  }

  #banner h3 {
    font-size: 3rem;
    line-height: 3.5rem;
  }

  .projMain h3 {
    font-size: 5rem;
    letter-spacing: -1px;
    line-height: 5rem;
  }

  button {
    font-size: 1.5rem;
    max-width: 16rem;
    margin-left: 2rem;
  }

  p,
  .projGrid p,
  .projGrid li {
    font-size: 1.5rem;
  }

  p {
    line-height: 1.75;
  }

  .projGrid p {
    line-height: 2.25rem;
  }
}
/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
  html {
    font-size: 12px;
  }

  .projMain {
    width: 50rem;
    padding: 0;
    padding-top: 8rem;
  }

  button {
    font-size: 1.5rem;
    max-width: 16rem;
    margin-left: 2rem;
  }
  button {
    font-size: 1.5rem;
    max-width: 16rem;
    margin-left: 2rem;
  }

  p,
  .projGrid p,
  .projGrid li {
    font-size: 1.5rem;
  }

  p {
    line-height: 1.75;
  }

  .projGrid p {
    line-height: 2.25rem;
  }
}
/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  .projMain {
    width: 60rem;
  }
}
/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
  html {
    font-size: 14px;
  }

  .projMain {
    padding: 6rem;
    padding-top: 8rem;
  }
}
/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
  html {
    font-size: 16px;
  }

  .projMain {
    width: 80rem;
  }
}

